BaikalETK: Autogen param.ccl

--- a/Tutorial-BaikalETK.ipynb
+++ b/Tutorial-BaikalETK.ipynb
@@ -8,9 +8,9 @@
     "\n",
     "## Author: Zach Etienne\n",
     "\n",
-    "## This module generates `BaikalETK`, an [Einstein Toolkit](https://einsteintoolkit.org) thorn for solving Einstein's equations in the BSSN formalism, in Cartesian coordinates\n",
+    "## This module generates `BaikalETK`, an [Einstein Toolkit](https://einsteintoolkit.org) thorn for solving Einstein's equations in the BSSN formalism, in Cartesian coordinates. It features SIMD intrinsics and OpenMP support.\n",
     "\n",
-    "**Module Status:** <font color='red'><b> Not yet validated </b></font>\n",
+    "**Module Status:** <font color='red'><b> Not yet validated, work-in-progress </b></font>\n",
     "\n",
     "**Validation Notes:** This tutorial module has not yet been validated.\n",
     "\n",
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,39 @@
     "\n",
     "restricted:\n",
     "\"\"\")\n",
-    "    "
+    "    parstring = \"\"\n",
+    "    for i in range(len(par.glb_Cparams_list)):\n",
+    "        keep_param = True # We'll not set some parameters in param.ccl; \n",
+    "                          #   e.g., those that should be #define'd like M_PI.\n",
+    "        partype = par.glb_Cparams_list[i].type\n",
+    "        if partype == \"bool\":\n",
+    "            parstring += \"BOOLEAN \"\n",
+    "        elif partype == \"REAL\":\n",
+    "            if par.glb_Cparams_list[i].defaultval != 1e300: # 1e300 is a magic value indicating that the C parameter should be mutable\n",
+    "                parstring += \"REAL \"\n",
+    "            else:\n",
+    "                keep_param = False\n",
+    "        elif partype == \"int\":\n",
+    "            parstring += \"INT \"\n",
+    "        elif partype == \"#define\":\n",
+    "            keep_param = False\n",
+    "        elif partype == \"char\":\n",
+    "            # FIXME\n",
+    "            print(\"Error: parameter \"+par.glb_Cparams_list[i].module+\"::\"+par.glb_Cparams_list[i].parname+\n",
+    "                  \" has unsupported type: \\\"\"+ par.glb_Cparams_list[i].type + \"\\\"\")\n",
+    "            sys.exit(1)\n",
+    "        else:\n",
+    "            print(\"Error: parameter \"+par.glb_Cparams_list[i].module+\"::\"+par.glb_Cparams_list[i].parname+\n",
+    "                  \" has unsupported type: \\\"\"+ par.glb_Cparams_list[i].type + \"\\\"\")\n",
+    "            sys.exit(1)\n",
+    "#         print(partype,keep_param)\n",
+    "        if keep_param:\n",
+    "            parstring += par.glb_Cparams_list[i].parname + \" \\\"\"+ par.glb_Cparams_list[i].parname +\" (see NRPy+ for parameter definition)\\\"\\n\"\n",
+    "            parstring += \"{\\n\"\n",
+    "            if partype != \"bool\":\n",
+    "                parstring += \" *:* :: \\\"Any value accepted. Sorry NRPy+ doesn't support allowed parameter ranges yet.\\\"\\n\"\n",
+    "            parstring += \"} \"+str(par.glb_Cparams_list[i].defaultval)+\"\\n\\n\"\n",
+    "    file.write(parstring)"
    ]
   },
   {
