BaikalETK: Continue work

--- a/Tutorial-BaikalETK.ipynb
+++ b/Tutorial-BaikalETK.ipynb
@@ -151,7 +151,7 @@
      "output_type": "stream",
      "text": [
       "Generating symbolic expressions for BSSN RHSs...\n",
-      "Finished BSSN symbolic expressions in 4.50829315186 seconds.\n"
+      "Finished BSSN symbolic expressions in 7.14291810989 seconds.\n"
      ]
     }
    ],
@@ -415,11 +415,11 @@
       "Generating C code for BSSN RHSs in Cartesian coordinates.\n",
       "Generating C code for Ricci tensor in Cartesian coordinates.\n",
       "Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.\n",
-      "Finished gamma constraint C codegen in 0.411771059036 seconds.\n",
+      "Finished gamma constraint C codegen in 0.514876127243 seconds.\n",
       "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
-      "Finished Hamiltonian & momentum constraint C codegen in 10.4662559032 seconds.\n",
-      "Finished BSSN_RHS C codegen in 74.3176720142 seconds.\n",
-      "Finished Ricci C codegen in 79.0024738312 seconds.\n"
+      "Finished Hamiltonian & momentum constraint C codegen in 13.8015201092 seconds.\n",
+      "Finished BSSN_RHS C codegen in 109.848754883 seconds.\n",
+      "Finished Ricci C codegen in 120.313696146 seconds.\n"
      ]
     }
    ],
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,24 +606,30 @@
     "    \n",
     "    # Next we declare gridfunctions based on their corresponding gridfunction groups as registered within NRPy+\n",
     "    \n",
-    "    def output_list_of_gfs(gfs_list):\n",
+    "    def output_list_of_gfs(gfs_list,description=\"User did not provide description\"):\n",
     "        gfsstr = \"    \"\n",
     "        for i in range(len(gfs_list)):\n",
     "            gfsstr += gfs_list[i]\n",
     "            if i != len(gfs_list)-1:\n",
     "                gfsstr += \",\" # This is a comma-separated list of gridfunctions\n",
     "            else:\n",
-    "                gfsstr += \"\\n}\\n\\n\"\n",
+    "                gfsstr += \"\\n} \\\"\"+description+\"\\\"\\n\\n\"\n",
     "        return gfsstr\n",
     "    # First EVOL type:\n",
     "    file.write(\"CCTK_REAL evol_variables type = GF Timelevels=3\\n{\\n\")\n",
-    "    file.write(output_list_of_gfs(evol_gfs_list))\n",
+    "    file.write(output_list_of_gfs(evol_gfs_list,\"BSSN evolved gridfunctions\"))\n",
+    "    # Second EVOL right-hand-sides\n",
+    "    file.write(\"CCTK_REAL evol_rhs_variables type = GF\\n{\\n\")\n",
+    "    rhs_list = []\n",
+    "    for gf in evol_gfs_list:\n",
+    "        rhs_list.append(gf+\"_rhs\")\n",
+    "    file.write(output_list_of_gfs(rhs_list,\"right-hand-side storage for BSSN evolved gridfunctions\"))\n",
     "    # Then AUX type:\n",
     "    file.write(\"CCTK_REAL aux_variables type = GF Timelevels=3\\n{\\n\")\n",
-    "    file.write(output_list_of_gfs(aux_gfs_list))\n",
+    "    file.write(output_list_of_gfs(aux_gfs_list,\"Auxiliary gridfunctions for BSSN diagnostics\"))\n",
     "    # Finally, AUXEVOL type:\n",
     "    file.write(\"CCTK_REAL auxevol_variables type = GF Timelevels=1 TAGS=\\'InterpNumTimelevels=1 prolongation=\\\"none\\\"\\'\\n{\\n\")\n",
-    "    file.write(output_list_of_gfs(auxevol_gfs_list))"
+    "    file.write(output_list_of_gfs(auxevol_gfs_list,\"Auxiliary gridfunctions needed for evaluating the BSSN RHSs\"))"
    ]
   },
   {
@@ -640,17 +646,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing BaikalETK//schedule.ccl\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open(os.path.join(outrootdir,\"schedule.ccl\"), \"w\") as file:\n",
     "    file.write(\"\"\"\n",
@@ -658,9 +656,10 @@
     "STORAGE: ADMBase::metric[metric_timelevels], ADMBase::curv[metric_timelevels], ADMBase::lapse[lapse_timelevels], ADMBase::shift[shift_timelevels]\n",
     "\n",
     "# Next allocate storage for all 3 gridfunction groups used in BaikalETK\n",
-    "STORAGE: evol_variables[3] # Used for evolution variables\n",
-    "STORAGE: aux_variables     # Used for diagnostics\n",
-    "STORAGE: auxevol_variables # Used for single-timelevel storage of variables needed for evolutions.\n",
+    "STORAGE: evol_variables[3]  # Evolution variables\n",
+    "STORAGE: evol_rhs_variables # Variables storing right-hand-sides\n",
+    "STORAGE: aux_variables      # Diagnostics variables\n",
+    "STORAGE: auxevol_variables  # Single-timelevel storage of variables needed for evolutions.\n",
     "\n",
     "# Next schedule RHS evaluation function\n",
     "\n",
@@ -671,9 +670,93 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "# Step 4: C driver functions\n",
+    "\n",
+    "## Step 4.a: Needed ETK functions: Banner, Symmetry registration, Parameter sanity check,  Method of Lines (`MoL`) registration, Boundary condition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import NRPy_logo as logo\n",
+    "with open(os.path.join(outdir,\"NRPy_logo.c\"),\"w\") as file:\n",
+    "    logostr = logo.print_logo(print_to_stdout=False)\n",
+    "    file.write(\"printf(\\\"BaikalETK: another ETK thorn generated by\\\\n\\\");\\n\")\n",
+    "    for line in logostr.splitlines():\n",
+    "        file.write(\"printf(\\\"\"+line+\"\\\\n\\\");\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: %%writefile is a cell magic, but the cell body is empty.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile $outdir/Banner.c\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 4.b: BSSN $\\leftrightarrow$ ADM conversions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 4.c: Evaluate BSSN RHSs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 4.d: Enforcing conformal 3-metric $\\det{\\bar{\\gamma}_{ij}}=\\det{\\hat{\\gamma}_{ij}}$ constraint (in Cartesian coordinates, $\\det{\\hat{\\gamma}_{ij}}=1$)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 4.e: Diagnostics: Computing Hamiltonian & momentum constraints"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 4.f: `make.code.defn`: List of all C driver functions needed to compile `BaikalETK`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Step 5: Code validation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='latex_pdf_output'></a>\n",
     "\n",
-    "# Step N: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
+    "# Step 6: Output this module to $\\LaTeX$-formatted PDF file \\[Back to [top](#toc)\\]\n",
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
@@ -682,27 +765,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[NbConvertApp] Converting notebook Tutorial-BaikalETK.ipynb to latex\n",
-      "[NbConvertApp] Writing 86604 bytes to Tutorial-BaikalETK.tex\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n",
-      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
-      " restricted \\write18 enabled.\n",
-      "entering extended mode\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx Tutorial-BaikalETK.ipynb\n",
     "!pdflatex -interaction=batchmode Tutorial-BaikalETK.tex\n",
