IllinoisGRMHD: reconstruct_set_of_prims_PPM -- added the discussion around the monotonize() function

--- a/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD_reconstruct_set_of_prims_PPM.ipynb
+++ b/IllinoisGRMHD/doc/Tutorial-IllinoisGRMHD_reconstruct_set_of_prims_PPM.ipynb
@@ -585,7 +585,7 @@
     "# Step 4: The `steepen_rho()` function \\[Back to [top](#toc)\\]\n",
     "$$\\label{steepen_rho}$$\n",
     "\n",
-    "The steepening procedure used within `IllinoisGRMHD` follows the prescription of [Martí & Müller (1996)](https://www.sciencedirect.com/science/article/pii/S0021999196900017). The idea here is to produce narrower profiles near the vicinity of a contact discontinuity.\n",
+    "The steepening procedure withing the PPM algorithm is applied only to $\\rho_{b}$. The idea here is to produce narrower profiles near the vicinity of a contact discontinuity.\n",
     "\n",
     "**A NOTE ON NOTATION**: in the discussion below we will refer to $\\rho$ as $\\rho$ to keep the notation a bit lighter. No confusion should arise from this since there is no other quantity $\\rho$ involved.\n",
     "\n",
@@ -666,7 +666,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next the contact discontinuity condition, eq. (63) of [Martí & Müller (1996)](https://www.sciencedirect.com/science/article/pii/S0021999196900017), is checked:\n",
+    "Next the contact discontinuity condition, eq. (3.2) of [Colella & Woodward (1984)](https://crd.lbl.gov/assets/pubs_presos/AMCS/ANAG/A141984.pdf), is checked:\n",
     "\n",
     "$$\n",
     "\\Gamma K_{0}\\frac{\\left|\\rho_{i+1}-\\rho_{i-1}\\right|}{\\min\\left(\\rho_{i+1},\\rho_{i-1}\\right)} \\geq \\frac{\\left|P_{i+1}-P_{i-1}\\right|}{\\min\\left(P_{i+1},P_{i-1}\\right)}\\ ,\n",
@@ -809,7 +809,107 @@
     "<a id='monotonize'></a>\n",
     "\n",
     "# Step 5: The `monotonize()` function \\[Back to [top](#toc)\\]\n",
-    "$$\\label{monotonize}$$"
+    "$$\\label{monotonize}$$\n",
+    "\n",
+    "The value $U_{i+1/2}$ will be assigned to $U_{l,i}$ and $U_{r,i-1}$ for most values of $i$, but in some cases this would lead to incorrect interpolation results. Near discontinuities, the value of either $U_{l}$, $U_{r}$, or both needs to be adjusted.\n",
+    "\n",
+    "Consider, then, the following quantities:\n",
+    "\n",
+    "\\begin{align}\n",
+    "\\delta U &\\equiv U_{r} - U_{l}\\ ,\\\\\n",
+    "\\bar{U} &\\equiv \\frac{U_{r} + U_{l}}{2}\\ .\n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile -a reconstruct_set_of_prims_PPM.C\n",
+    "\n",
+    "\n",
+    "static inline void monotonize(CCTK_REAL U,CCTK_REAL &Ur,CCTK_REAL &Ul) {\n",
+    "  CCTK_REAL dU = Ur - Ul;\n",
+    "  CCTK_REAL mU = 0.5*(Ur+Ul);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then, following eq. (1.10) of [Colella & Woodward (1984)](https://crd.lbl.gov/assets/pubs_presos/AMCS/ANAG/A141984.pdf), we will check the following three cases:\n",
+    "\n",
+    "$$\n",
+    "\\boxed{\\text{Case 1: if}\\ \\left(U_{r} - U\\right)\\left(U - U_{l}\\right)\\leq 0 \\ \\text{then:}\\ \n",
+    "\\left\\{\n",
+    "\\begin{matrix}\n",
+    "U_{r} \\to U\\ ,\\\\\n",
+    "\\ U_{l}\\to U\\ .\n",
+    "\\end{matrix}\n",
+    "\\right.}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile -a reconstruct_set_of_prims_PPM.C\n",
+    "\n",
+    "\n",
+    "  if ( (Ur-U)*(U-Ul) <= 0.0) { \n",
+    "    Ur = U;\n",
+    "    Ul = U;\n",
+    "    return;\n",
+    "  }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\boxed{\\text{Case 2: if}\\ \\delta U\\left(U - \\bar{U}\\right) > \\frac{\\left(\\delta U\\right)^{2}}{6} \\ \\text{then:}\\ \n",
+    "\\left\\{\n",
+    "\\begin{matrix}\n",
+    "U_{r} \\to U_{r}\\ ,\\\\\n",
+    "\\ U_{l}\\to 3U-2U_{r}\\ .\n",
+    "\\end{matrix}\n",
+    "\\right.}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile -a reconstruct_set_of_prims_PPM.C\n",
+    "\n",
+    "  if ( dU*(U-mU) > (1.0/6.0)*SQR(dU)) { \n",
+    "    Ul = 3.0*U - 2.0*Ur;\n",
+    "    return;\n",
+    "  }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\boxed{\\text{Case 3: if}\\ \\delta U\\left(U - \\bar{U}\\right) < -\\frac{\\left(\\delta U\\right)^{2}}{6} \\ \\text{then:}\\ \n",
+    "\\left\\{\n",
+    "\\begin{matrix}\n",
+    "U_{r} \\to 3U-2U_{l}\\ ,\\\\\n",
+    "\\ U_{l}\\to U_{l}\\ .\n",
+    "\\end{matrix}\n",
+    "\\right.}\n",
+    "$$"
    ]
   },
   {
@@ -828,20 +928,6 @@
    "source": [
     "%%writefile -a reconstruct_set_of_prims_PPM.C\n",
     "\n",
-    "\n",
-    "static inline void monotonize(CCTK_REAL U,CCTK_REAL &Ur,CCTK_REAL &Ul) {\n",
-    "  CCTK_REAL dU = Ur - Ul;\n",
-    "  CCTK_REAL mU = 0.5*(Ur+Ul);\n",
-    "  \n",
-    "  if ( (Ur-U)*(U-Ul) <= 0.0) { \n",
-    "    Ur = U;\n",
-    "    Ul = U;\n",
-    "    return;\n",
-    "  }\n",
-    "  if ( dU*(U-mU) > (1.0/6.0)*SQR(dU)) { \n",
-    "    Ul = 3.0*U - 2.0*Ur;\n",
-    "    return;\n",
-    "  }\n",
     "  if ( dU*(U-mU) < -(1.0/6.0)*SQR(dU)) {\n",
     "    Ur = 3.0*U - 2.0*Ul;\n",
     "    return;\n",
