BaikalETK: ready for first compile test

--- a/Tutorial-BaikalETK.ipynb
+++ b/Tutorial-BaikalETK.ipynb
@@ -151,7 +151,7 @@
      "output_type": "stream",
      "text": [
       "Generating symbolic expressions for BSSN RHSs...\n",
-      "Finished BSSN symbolic expressions in 6.99416017532 seconds.\n"
+      "Finished BSSN symbolic expressions in 6.65717506409 seconds.\n"
      ]
     }
    ],
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -415,9 +415,11 @@
       "Generating C code for BSSN RHSs in Cartesian coordinates.\n",
       "Generating C code for Ricci tensor in Cartesian coordinates.\n",
       "Generating optimized C code for gamma constraint. May take a while, depending on CoordSystem.\n",
-      "Finished gamma constraint C codegen in 0.495145082474 seconds.\n",
+      "Finished gamma constraint C codegen in 0.50922203064 seconds.\n",
       "Generating optimized C code for Ham. & mom. constraints. May take a while, depending on CoordSystem.\n",
-      "Finished Hamiltonian & momentum constraint C codegen in 14.2344172001 seconds.\n"
+      "Finished Hamiltonian & momentum constraint C codegen in 14.120620966 seconds.\n",
+      "Finished BSSN_RHS C codegen in 107.83914113 seconds.\n",
+      "Finished Ricci C codegen in 121.776859999 seconds.\n"
      ]
     }
    ],
@@ -462,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,12 +595,44 @@
     "#   functions. \n",
     "inherits:   ADMBase Boundary Grid MethodofLines\n",
     "\n",
+    "# Needed functions and #include's:\n",
+    "USES INCLUDE: Symmetry.h\n",
+    "USES INCLUDE: Boundary.h\n",
+    "\n",
+    "# Needed Method of Lines function\n",
+    "CCTK_INT FUNCTION MoLRegisterEvolved(CCTK_INT IN EvolvedIndex, CCTK_INT IN RHSIndex)\n",
+    "USES FUNCTION MoLRegisterEvolved\n",
+    "\n",
+    "# Needed Boundary Conditions function\n",
+    "CCTK_INT FUNCTION GetBoundarySpecification(CCTK_INT IN size, CCTK_INT OUT ARRAY nboundaryzones, CCTK_INT OUT ARRAY is_internal, CCTK_INT OUT ARRAY is_staggered, CCTK_INT OUT ARRAY shiftout)\n",
+    "USES FUNCTION GetBoundarySpecification\n",
+    "\n",
+    "CCTK_INT FUNCTION SymmetryTableHandleForGrid(CCTK_POINTER_TO_CONST IN cctkGH)\n",
+    "USES FUNCTION SymmetryTableHandleForGrid\n",
+    "\n",
+    "CCTK_INT FUNCTION Boundary_SelectVarForBC(CCTK_POINTER_TO_CONST IN GH, CCTK_INT IN faces, CCTK_INT IN boundary_width, CCTK_INT IN table_handle, CCTK_STRING IN var_name, CCTK_STRING IN bc_name)\n",
+    "USES FUNCTION Boundary_SelectVarForBC\n",
+    "\n",
+    "# Needed for EinsteinEvolve/NewRad outer boundary condition driver:\n",
+    "CCTK_INT FUNCTION                         \\\n",
+    "    NewRad_Apply                          \\\n",
+    "        (CCTK_POINTER_TO_CONST IN cctkGH, \\\n",
+    "         CCTK_REAL ARRAY IN var,          \\\n",
+    "         CCTK_REAL ARRAY INOUT rhs,       \\\n",
+    "         CCTK_REAL IN var0,               \\\n",
+    "         CCTK_REAL IN v0,                 \\\n",
+    "         CCTK_INT IN radpower)\n",
+    "REQUIRES FUNCTION NewRad_Apply\n",
+    "\n",
+    "\n",
     "# Tell the Toolkit that we want all gridfunctions\n",
     "#    to be visible to other thorns by using \n",
     "#    the keyword \"public\". Note that declaring these \n",
     "#    gridfunctions *does not* allocate memory for them;\n",
     "#    that is done by the schedule.ccl file.\n",
     "\n",
+    "# FIXME: add info for symmetry conditions: \n",
+    "#    https://einsteintoolkit.org/thornguide/CactusBase/SymBase/documentation.html\n",
     "public:\n",
     "\"\"\")\n",
     "    \n",
@@ -644,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,34 +710,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Banner.c']\n"
+     ]
+    }
+   ],
    "source": [
     "# First the ETK banner code, proudly showing the NRPy+ banner\n",
     "import NRPy_logo as logo\n",
-    "with open(os.path.join(outdir,\"NRPy_logo.c\"),\"w\") as file:\n",
+    "make_code_defn_list = []\n",
+    "def append_to_make_code_defn_list(filename):\n",
+    "    if filename not in make_code_defn_list:\n",
+    "        make_code_defn_list.append(filename)\n",
+    "    return os.path.join(outdir,filename)\n",
+    "\n",
+    "with open(append_to_make_code_defn_list(\"Banner.c\"),\"w\") as file:\n",
+    "    file.write(\"\"\"\n",
+    "#include \"stdio.h\"\n",
+    "\n",
+    "void BaikalETK_Banner() \n",
+    "{\n",
+    "    \"\"\")\n",
     "    logostr = logo.print_logo(print_to_stdout=False)\n",
     "    file.write(\"printf(\\\"BaikalETK: another Einstein Toolkit thorn generated by\\\\n\\\");\\n\")\n",
     "    for line in logostr.splitlines():\n",
-    "        file.write(\"printf(\\\"\"+line+\"\\\\n\\\");\\n\")"
+    "        file.write(\"    printf(\\\"\"+line+\"\\\\n\\\");\\n\")\n",
+    "    file.write(\"}\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Banner.c', 'Symmetry_registration_oldCartGrid3D.c']\n"
+     ]
+    }
+   ],
    "source": [
     "# Next register symmetries\n",
-    "with open(os.path.join(outdir,\"Symmetry_registration.c\"),\"w\") as file:\n",
+    "with open(append_to_make_code_defn_list(\"Symmetry_registration_oldCartGrid3D.c\"),\"w\") as file:\n",
     "    file.write(\"\"\"\n",
     "#include \"cctk.h\"\n",
     "#include \"cctk_Arguments.h\"\n",
     "#include \"cctk_Parameters.h\"\n",
     "#include \"Symmetry.h\"\n",
     "\n",
-    "extern \"C\" void Symmetry_registration(CCTK_ARGUMENTS)\n",
+    "void BaikalETK_Symmetry_registration(CCTK_ARGUMENTS)\n",
     "{\n",
     "  DECLARE_CCTK_ARGUMENTS;\n",
     "  DECLARE_CCTK_PARAMETERS;\n",
@@ -758,26 +821,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Next registration with the Method of Lines thorn\n",
-    "with open(os.path.join(outdir,\"ParamSanityCheck.c\"),\"w\") as file:\n",
-    "    file.write(\"\"\"\n",
-    "\"\"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "# Next registration with the Method of Lines thorn\n",
-    "with open(os.path.join(outdir,\"MoL_registration.c\"),\"w\") as file:\n",
+    "with open(append_to_make_code_defn_list(\"MoL_registration.c\"),\"w\") as file:\n",
     "    file.write(\"\"\"\n",
     "//--------------------------------------------------------------------------\n",
     "// Register with the Method of Lines time stepper\n",
@@ -794,7 +845,7 @@
     "\n",
     "#include \"Symmetry.h\"\n",
     "\n",
-    "extern \"C\" void IllinoisGRMHD_RegisterVars(CCTK_ARGUMENTS)\n",
+    "extern \"C\" void BaikalETK_MoL_registration(CCTK_ARGUMENTS)\n",
     "{\n",
     "  DECLARE_CCTK_ARGUMENTS;\n",
     "  DECLARE_CCTK_PARAMETERS;\n",
@@ -809,7 +860,96 @@
     "  \n",
     "  if (ierr) CCTK_ERROR(\"Problems registering with MoL\");\n",
     "}\n",
-    "\"\"\""
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Banner.c', 'Symmetry_registration_oldCartGrid3D.c', 'BoundaryCondition_registration.c']\n",
+      "['Banner.c', 'Symmetry_registration_oldCartGrid3D.c', 'BoundaryCondition_registration.c', 'BoundaryCondition_NewRad.c']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Next register with the boundary conditions thorns.\n",
+    "# PART 1: Set BC type to \"none\" for all variables\n",
+    "# Since we choose NewRad boundary conditions, we must register all \n",
+    "#   gridfunctions to have boundary type \"none\". This is because\n",
+    "#   NewRad is seen by the rest of the Toolkit as a modification to the\n",
+    "#   RHSs.\n",
+    "\n",
+    "# This code is based on Kranc's McLachlan/ML_BSSN/src/Boundaries.cc code.\n",
+    "with open(append_to_make_code_defn_list(\"BoundaryCondition_registration.c\"),\"w\") as file:\n",
+    "    file.write(\"\"\"\n",
+    "#include \"cctk.h\"\n",
+    "#include \"cctk_Arguments.h\"\n",
+    "#include \"cctk_Parameters.h\"\n",
+    "#include \"cctk_Faces.h\"\n",
+    "#include \"util_Table.h\"\n",
+    "#include \"Symmetry.h\"\n",
+    "\n",
+    "void BaikalETK_BoundaryCondition_registration(CCTK_ARGUMENTS)\n",
+    "{\n",
+    "  DECLARE_CCTK_ARGUMENTS;\n",
+    "  DECLARE_CCTK_PARAMETERS;\n",
+    "  \n",
+    "  CCTK_INT ierr CCTK_ATTRIBUTE_UNUSED = 0;\n",
+    "\"\"\")\n",
+    "    for gf in full_gfs_list:\n",
+    "        file.write(\"\"\"\n",
+    "  ierr = Boundary_SelectVarForBC(cctkGH, CCTK_ALL_FACES, 1, -1, \"BaikalETK::\"\"\"+gf+\"\"\"\", \"none\");\n",
+    "  if (ierr < 0) CCTK_ERROR(\"Failed to register BC for BaikalETK::\"\"\"+gf+\"\"\"!\");\n",
+    "\"\"\")\n",
+    "    file.write(\"\\n}\\n\")\n",
+    "    \n",
+    "# PART 2: Set C code for calling NewRad BCs\n",
+    "#   As explained in lean_public/LeanBSSNMoL/src/calc_bssn_rhs.F90,\n",
+    "#   the function NewRad_Apply takes the following arguments:\n",
+    "#   NewRad_Apply(cctkGH, var, rhs, var0, v0, radpower),\n",
+    "#     which implement the boundary condition:\n",
+    "#       var  =  var_at_infinite_r + u(r-var_char_speed*t)/r^var_radpower\n",
+    "#  Obviously for var_radpower>0, var_at_infinite_r is the value of\n",
+    "#    the variable at r->infinity. var_char_speed is the propagation\n",
+    "#    speed at the outer boundary, and var_radpower is the radial \n",
+    "#    falloff rate.\n",
+    "\n",
+    "with open(append_to_make_code_defn_list(\"BoundaryCondition_NewRad.c\"),\"w\") as file:\n",
+    "    file.write(\"\"\"\n",
+    "#include <cctk.h>\n",
+    "#include <cctk_Arguments.h>\n",
+    "#include <cctk_Parameters.h>\n",
+    "\n",
+    "#include <math.h>\n",
+    "\n",
+    "void BaikalETK_NewRad(CCTK_ARGUMENTS) {\n",
+    "  DECLARE_CCTK_ARGUMENTS;\n",
+    "  DECLARE_CCTK_PARAMETERS;\n",
+    "  \n",
+    "\"\"\")\n",
+    "    for gf in evol_gfs_list:\n",
+    "        var_at_infinite_r = \"0.0\"\n",
+    "        var_char_speed    = \"1.0\"\n",
+    "        var_radpower      = \"1.0\"\n",
+    "        \n",
+    "        if gf == \"alpha\":\n",
+    "            var_at_infinite_r = \"1.0\"\n",
+    "            if LapseCondition == \"OnePlusLog\":\n",
+    "                var_char_speed = \"sqrt(2.0)\"\n",
+    "            else:\n",
+    "                pass # 1.0 (default) is fine\n",
+    "        if \"aDD\" in gf or \"trK\" in gf: # consistent with Lean code.\n",
+    "            var_radpower = \"2.0\"\n",
+    "\n",
+    "        file.write(\"  NewRad_Apply(cctkGH, \"+gf+\", \"+gf+\"_rhs, \"+var_at_infinite_r+\", \"+\n",
+    "                   var_char_speed+\", \"+var_radpower+\");\\n\")\n",
+    "    file.write(\"}\\n\")"
    ]
   },
   {
@@ -848,6 +988,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(os.path.join(outdir,\"make.code.defn\"), \"w\") as file:\n",
+    "    file.write(\"\"\"\n",
+    "# Main make.code.defn file for thorn IllinoisGRMHD\n",
+    "\n",
+    "# Source files in this directory\n",
+    "SRCS =  \\\\ \\n\"\"\")\n",
+    "    filestring = \"\"\n",
+    "    for i in range(len(make_code_defn_list)):\n",
+    "        filestring += \"      \"+make_code_defn_list[i]\n",
+    "        if i != len(make_code_defn_list)-1:\n",
+    "            filestring += \" \\\\ \\n\"\n",
+    "        else:\n",
+    "            filestring += \"\\n\"\n",
+    "    file.write(filestring)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -869,9 +1031,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook Tutorial-BaikalETK.ipynb to latex\n",
+      "[NbConvertApp] Writing 122095 bytes to Tutorial-BaikalETK.tex\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
+      " restricted \\write18 enabled.\n",
+      "entering extended mode\n"
+     ]
+    }
+   ],
    "source": [
     "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx Tutorial-BaikalETK.ipynb\n",
     "!pdflatex -interaction=batchmode Tutorial-BaikalETK.tex\n",
