BaikalETK: Set BC type for auxiliary gfs (i.e., BSSN constraints) to flat.

--- a/Tutorial-BaikalETK.ipynb
+++ b/Tutorial-BaikalETK.ipynb
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +867,7 @@
     "#   RHSs.\n",
     "\n",
     "# This code is based on Kranc's McLachlan/ML_BSSN/src/Boundaries.cc code.\n",
-    "with open(append_to_make_code_defn_list(\"BoundaryCondition_registration.c\"),\"w\") as file:\n",
+    "with open(append_to_make_code_defn_list(\"BoundaryConditions.c\"),\"w\") as file:\n",
     "    file.write(\"\"\"\n",
     "#include \"cctk.h\"\n",
     "#include \"cctk_Arguments.h\"\n",
@@ -876,19 +876,36 @@
     "#include \"util_Table.h\"\n",
     "#include \"Symmetry.h\"\n",
     "\n",
-    "void BaikalETK_BoundaryCondition_registration(CCTK_ARGUMENTS)\n",
+    "// Set `none` boundary conditions on BSSN RHSs, as these are set via NewRad.\n",
+    "void BaikalETK_BoundaryConditions_evolved_gfs(CCTK_ARGUMENTS)\n",
     "{\n",
     "  DECLARE_CCTK_ARGUMENTS;\n",
     "  DECLARE_CCTK_PARAMETERS;\n",
     "  \n",
     "  CCTK_INT ierr CCTK_ATTRIBUTE_UNUSED = 0;\n",
     "\"\"\")\n",
-    "    for gf in full_gfs_list:\n",
+    "    for gf in evol_gfs_list:\n",
     "        file.write(\"\"\"\n",
     "  ierr = Boundary_SelectVarForBC(cctkGH, CCTK_ALL_FACES, 1, -1, \"BaikalETK::\"\"\"+gf+\"\"\"\", \"none\");\n",
     "  if (ierr < 0) CCTK_ERROR(\"Failed to register BC for BaikalETK::\"\"\"+gf+\"\"\"!\");\n",
     "\"\"\")\n",
-    "    file.write(\"\\n}\\n\")\n",
+    "    file.write(\"\"\"\n",
+    "}\n",
+    "\n",
+    "// Set `flat` boundary conditions on BSSN constraints, similar to what Lean does.\n",
+    "void BaikalETK_BoundaryConditions_aux_gfs(CCTK_ARGUMENTS)\n",
+    "  DECLARE_CCTK_ARGUMENTS;\n",
+    "  DECLARE_CCTK_PARAMETERS;\n",
+    "  \n",
+    "  CCTK_INT ierr CCTK_ATTRIBUTE_UNUSED = 0;\n",
+    "\n",
+    "\"\"\")\n",
+    "    for gf in aux_gfs_list:\n",
+    "        file.write(\"\"\"\n",
+    "  ierr = Boundary_SelectVarForBC(cctkGH, CCTK_ALL_FACES, 1, -1, \"BaikalETK::\"\"\"+gf+\"\"\"\", \"flat\");\n",
+    "  if (ierr < 0) CCTK_ERROR(\"Failed to register BC for BaikalETK::\"\"\"+gf+\"\"\"!\");\n",
+    "\"\"\")\n",
+    "    \n",
     "    \n",
     "# PART 2: Set C code for calling NewRad BCs\n",
     "#   As explained in lean_public/LeanBSSNMoL/src/calc_bssn_rhs.F90,\n",
